--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 pandas>=1.3.0
 numpy>=1.21.0
 matplotlib>=3.4.0
-plotly>=5.0.0  # Optional, but good for later visualization
-streamlit>=1.0.0  # Optional, if you plan to make a dashboard later
+alpha_vantage>=2.3.1
